parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    QUOTE

Grammar

Rule 0     S' -> program
Rule 1     program -> PROGRAM ID initProg SCOLON declarClases declarVar addGlobSize definFunc MAIN auxMain LPAREN RPAREN declarVar LBRACE listaEstatutos RBRACE endProg prueba
Rule 2     addGlobSize -> <empty>
Rule 3     initProg -> <empty>
Rule 4     auxMain -> <empty>
Rule 5     endProg -> <empty>
Rule 6     declarClases -> CLASS ID herencia LBRACE ATTRIBUTES declarAttributes METHODS declarMethods RBRACE declarClases
Rule 7     declarClases -> empty
Rule 8     herencia -> LT EXTENDS ID GT
Rule 9     herencia -> empty
Rule 10    declarAttributes -> tipo COLON listaIdDeclare SCOLON declarAttributes
Rule 11    declarAttributes -> empty
Rule 12    listaIdDeclare -> idDeclare
Rule 13    listaIdDeclare -> idDeclare COMMA listaIdDeclare
Rule 14    idDeclare -> ID auxDeclare auxDeclare2
Rule 15    idDeclare -> ID auxDeclare LBRACK CTE_I addCteTable RBRACK auxCTE
Rule 16    idDeclare -> ID auxDeclare LBRACK CTE_I addCteTable COMMA CTE_I addCteTable auxCTE2 RBRACK
Rule 17    auxDeclare -> <empty>
Rule 18    auxDeclare2 -> <empty>
Rule 19    auxCTE -> <empty>
Rule 20    auxCTE2 -> <empty>
Rule 21    idCall -> ID idCallaux checkDim
Rule 22    idCall -> ID idCallaux DOT ID
Rule 23    idCall -> ID idCallaux LBRACK addFF exp RBRACK rmFF idCallaux4 checkDim1
Rule 24    idCall -> ID idCallaux LBRACK addFF exp idCallaux2 rmFF COMMA addFF exp idCallaux3 RBRACK rmFF checkDim2
Rule 25    idCallaux -> <empty>
Rule 26    idCallaux2 -> <empty>
Rule 27    idCallaux3 -> <empty>
Rule 28    idCallaux4 -> <empty>
Rule 29    checkDim -> <empty>
Rule 30    checkDim1 -> <empty>
Rule 31    checkDim2 -> <empty>
Rule 32    tipo -> ID
Rule 33    tipo -> INT
Rule 34    tipo -> FLOAT
Rule 35    tipo -> CHAR
Rule 36    tipoMethod -> VOID
Rule 37    tipoMethod -> INT
Rule 38    tipoMethod -> FLOAT
Rule 39    tipoMethod -> CHAR
Rule 40    declarMethods -> tipoMethod FUNC ID LPAREN listaParam RPAREN LBRACE listaEstatutos RBRACE declarMethods
Rule 41    declarMethods -> empty
Rule 42    listaParam -> param
Rule 43    listaParam -> param COMMA listaParam
Rule 44    listaParam -> empty
Rule 45    param -> tipo COLON ID
Rule 46    declarVar -> VAR tipo COLON listaIdDeclare SCOLON declarVar
Rule 47    declarVar -> empty
Rule 48    definFunc -> tipoMethod FUNC ID auxFuncion LPAREN listaParam RPAREN declarVar setDI LBRACE listaEstatutos RBRACE endF definFunc
Rule 49    definFunc -> empty
Rule 50    auxFuncion -> <empty>
Rule 51    setDI -> <empty>
Rule 52    endF -> <empty>
Rule 53    listaEstatutos -> estatutos listaEstatutos
Rule 54    listaEstatutos -> empty
Rule 55    estatutos -> llamada SCOLON
Rule 56    estatutos -> asignacion SCOLON
Rule 57    estatutos -> returnf SCOLON
Rule 58    estatutos -> lectura SCOLON
Rule 59    estatutos -> escritura SCOLON
Rule 60    estatutos -> condicion
Rule 61    estatutos -> cond_w
Rule 62    estatutos -> cond_f
Rule 63    asignacion -> idCall ASIGNA pushPoper exp asignStep2
Rule 64    asignStep2 -> <empty>
Rule 65    llamada -> ID DOT ID LPAREN enviaParam RPAREN
Rule 66    llamada -> ID verExist LPAREN enviaParam coherenceGo RPAREN
Rule 67    enviaParam -> paramReferencia
Rule 68    enviaParam -> empty
Rule 69    paramReferencia -> exp paramType
Rule 70    paramReferencia -> exp paramType COMMA paramCount paramReferencia
Rule 71    verExist -> <empty>
Rule 72    paramType -> <empty>
Rule 73    paramCount -> <empty>
Rule 74    coherenceGo -> <empty>
Rule 75    returnf -> RETURN pushPoper LPAREN exp RPAREN popReturn
Rule 76    popReturn -> <empty>
Rule 77    lectura -> READ pushPoper LPAREN listaId RPAREN
Rule 78    listaId -> idCall popIO
Rule 79    listaId -> idCall COMMA popIO insertOpRead listaId
Rule 80    insertOpRead -> <empty>
Rule 81    popIO -> <empty>
Rule 82    escritura -> WRITE pushPoper LPAREN exp popIO lextra RPAREN
Rule 83    escritura -> WRITE pushPoper LPAREN LETRERO addCteTable letreroPush popIO lextra RPAREN
Rule 84    lextra -> COMMA insertOpWrite exp popIO lextra
Rule 85    lextra -> COMMA insertOpWrite LETRERO addCteTable letreroPush popIO lextra
Rule 86    lextra -> empty
Rule 87    insertOpWrite -> <empty>
Rule 88    letreroPush -> <empty>
Rule 89    condicion -> IF LPAREN exp RPAREN cond1 THEN LBRACE listaEstatutos RBRACE
Rule 90    condicion -> IF LPAREN exp RPAREN cond1 THEN LBRACE listaEstatutos RBRACE ELSE cond3 LBRACE listaEstatutos RBRACE
Rule 91    cond1 -> <empty>
Rule 92    cond3 -> <empty>
Rule 93    cond_w -> WHILE step1While LPAREN exp RPAREN step2While DO LBRACE listaEstatutos RBRACE step3While
Rule 94    step1While -> <empty>
Rule 95    step2While -> <empty>
Rule 96    step3While -> <empty>
Rule 97    cond_f -> FOR asignacion TO exp step1While step1For step2While DO LBRACE listaEstatutos RBRACE step3While
Rule 98    step1For -> <empty>
Rule 99    exp -> texp step7
Rule 100   exp -> texp step7 OR pushPoper exp
Rule 101   texp -> gexp step6
Rule 102   texp -> gexp step6 AND pushPoper texp
Rule 103   gexp -> mexp step5
Rule 104   gexp -> mexp step5 LT pushPoper gexp
Rule 105   gexp -> mexp step5 GT pushPoper gexp
Rule 106   gexp -> mexp step5 LTE pushPoper gexp
Rule 107   gexp -> mexp step5 GTE pushPoper gexp
Rule 108   gexp -> mexp step5 EQUALS pushPoper gexp
Rule 109   gexp -> mexp step5 NEQUALS pushPoper gexp
Rule 110   mexp -> t step4
Rule 111   mexp -> t step4 PLUS pushPoper mexp
Rule 112   mexp -> t step4 MINUS pushPoper mexp
Rule 113   t -> f step3
Rule 114   t -> f step3 MULT pushPoper t
Rule 115   t -> f step3 DIV pushPoper t
Rule 116   f -> LPAREN addFF exp RPAREN rmFF
Rule 117   f -> CTE_I addCteTable step1
Rule 118   f -> CTE_F addCteTable step1
Rule 119   f -> CTE_C addCteTable step1
Rule 120   f -> llamada
Rule 121   f -> idCall
Rule 122   addCteTable -> <empty>
Rule 123   step1 -> <empty>
Rule 124   step3 -> <empty>
Rule 125   step4 -> <empty>
Rule 126   step5 -> <empty>
Rule 127   step6 -> <empty>
Rule 128   step7 -> <empty>
Rule 129   addFF -> <empty>
Rule 130   rmFF -> <empty>
Rule 131   pushPoper -> <empty>
Rule 132   empty -> <empty>
Rule 133   prueba -> <empty>

Terminals, with rules where they appear

AND                  : 102
ASIGNA               : 63
ATTRIBUTES           : 6
CHAR                 : 35 39
CLASS                : 6
COLON                : 10 45 46
COMMA                : 13 16 24 43 70 79 84 85
CTE_C                : 119
CTE_F                : 118
CTE_I                : 15 16 16 117
DIV                  : 115
DO                   : 93 97
DOT                  : 22 65
ELSE                 : 90
EQUALS               : 108
EXTENDS              : 8
FLOAT                : 34 38
FOR                  : 97
FUNC                 : 40 48
GT                   : 8 105
GTE                  : 107
ID                   : 1 6 8 14 15 16 21 22 22 23 24 32 40 45 48 65 65 66
IF                   : 89 90
INT                  : 33 37
LBRACE               : 1 6 40 48 89 90 90 93 97
LBRACK               : 15 16 23 24
LETRERO              : 83 85
LPAREN               : 1 40 48 65 66 75 77 82 83 89 90 93 116
LT                   : 8 104
LTE                  : 106
MAIN                 : 1
METHODS              : 6
MINUS                : 112
MULT                 : 114
NEQUALS              : 109
OR                   : 100
PLUS                 : 111
PROGRAM              : 1
QUOTE                : 
RBRACE               : 1 6 40 48 89 90 90 93 97
RBRACK               : 15 16 23 24
READ                 : 77
RETURN               : 75
RPAREN               : 1 40 48 65 66 75 77 82 83 89 90 93 116
SCOLON               : 1 10 46 55 56 57 58 59
THEN                 : 89 90
TO                   : 97
VAR                  : 46
VOID                 : 36
WHILE                : 93
WRITE                : 82 83
error                : 

Nonterminals, with rules where they appear

addCteTable          : 15 16 16 83 85 117 118 119
addFF                : 23 24 24 116
addGlobSize          : 1
asignStep2           : 63
asignacion           : 56 97
auxCTE               : 15
auxCTE2              : 16
auxDeclare           : 14 15 16
auxDeclare2          : 14
auxFuncion           : 48
auxMain              : 1
checkDim             : 21
checkDim1            : 23
checkDim2            : 24
coherenceGo          : 66
cond1                : 89 90
cond3                : 90
cond_f               : 62
cond_w               : 61
condicion            : 60
declarAttributes     : 6 10
declarClases         : 1 6
declarMethods        : 6 40
declarVar            : 1 1 46 48
definFunc            : 1 48
empty                : 7 9 11 41 44 47 49 54 68 86
endF                 : 48
endProg              : 1
enviaParam           : 65 66
escritura            : 59
estatutos            : 53
exp                  : 23 24 24 63 69 70 75 82 84 89 90 93 97 100 116
f                    : 113 114 115
gexp                 : 101 102 104 105 106 107 108 109
herencia             : 6
idCall               : 63 78 79 121
idCallaux            : 21 22 23 24
idCallaux2           : 24
idCallaux3           : 24
idCallaux4           : 23
idDeclare            : 12 13
initProg             : 1
insertOpRead         : 79
insertOpWrite        : 84 85
lectura              : 58
letreroPush          : 83 85
lextra               : 82 83 84 85
listaEstatutos       : 1 40 48 53 89 90 90 93 97
listaId              : 77 79
listaIdDeclare       : 10 13 46
listaParam           : 40 43 48
llamada              : 55 120
mexp                 : 103 104 105 106 107 108 109 111 112
param                : 42 43
paramCount           : 70
paramReferencia      : 67 70
paramType            : 69 70
popIO                : 78 79 82 83 84 85
popReturn            : 75
program              : 0
prueba               : 1
pushPoper            : 63 75 77 82 83 100 102 104 105 106 107 108 109 111 112 114 115
returnf              : 57
rmFF                 : 23 24 24 116
setDI                : 48
step1                : 117 118 119
step1For             : 97
step1While           : 93 97
step2While           : 93 97
step3                : 113 114 115
step3While           : 93 97
step4                : 110 111 112
step5                : 103 104 105 106 107 108 109
step6                : 101 102
step7                : 99 100
t                    : 110 111 112 114 115
texp                 : 99 100 102
tipo                 : 10 45 46
tipoMethod           : 40 48
verExist             : 66

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . PROGRAM ID initProg SCOLON declarClases declarVar addGlobSize definFunc MAIN auxMain LPAREN RPAREN declarVar LBRACE listaEstatutos RBRACE endProg prueba

    PROGRAM         shift and go to state 2

    program                        shift and go to state 1

state 1

    (0) S' -> program .



state 2

    (1) program -> PROGRAM . ID initProg SCOLON declarClases declarVar addGlobSize definFunc MAIN auxMain LPAREN RPAREN declarVar LBRACE listaEstatutos RBRACE endProg prueba

    ID              shift and go to state 3


state 3

    (1) program -> PROGRAM ID . initProg SCOLON declarClases declarVar addGlobSize definFunc MAIN auxMain LPAREN RPAREN declarVar LBRACE listaEstatutos RBRACE endProg prueba
    (3) initProg -> .

    SCOLON          reduce using rule 3 (initProg -> .)

    initProg                       shift and go to state 4

state 4

    (1) program -> PROGRAM ID initProg . SCOLON declarClases declarVar addGlobSize definFunc MAIN auxMain LPAREN RPAREN declarVar LBRACE listaEstatutos RBRACE endProg prueba

    SCOLON          shift and go to state 5


state 5

    (1) program -> PROGRAM ID initProg SCOLON . declarClases declarVar addGlobSize definFunc MAIN auxMain LPAREN RPAREN declarVar LBRACE listaEstatutos RBRACE endProg prueba
    (6) declarClases -> . CLASS ID herencia LBRACE ATTRIBUTES declarAttributes METHODS declarMethods RBRACE declarClases
    (7) declarClases -> . empty
    (132) empty -> .

    CLASS           shift and go to state 7
    VAR             reduce using rule 132 (empty -> .)
    VOID            reduce using rule 132 (empty -> .)
    INT             reduce using rule 132 (empty -> .)
    FLOAT           reduce using rule 132 (empty -> .)
    CHAR            reduce using rule 132 (empty -> .)
    MAIN            reduce using rule 132 (empty -> .)

    declarClases                   shift and go to state 6
    empty                          shift and go to state 8

state 6

    (1) program -> PROGRAM ID initProg SCOLON declarClases . declarVar addGlobSize definFunc MAIN auxMain LPAREN RPAREN declarVar LBRACE listaEstatutos RBRACE endProg prueba
    (46) declarVar -> . VAR tipo COLON listaIdDeclare SCOLON declarVar
    (47) declarVar -> . empty
    (132) empty -> .

    VAR             shift and go to state 10
    VOID            reduce using rule 132 (empty -> .)
    INT             reduce using rule 132 (empty -> .)
    FLOAT           reduce using rule 132 (empty -> .)
    CHAR            reduce using rule 132 (empty -> .)
    MAIN            reduce using rule 132 (empty -> .)

    declarVar                      shift and go to state 9
    empty                          shift and go to state 11

state 7

    (6) declarClases -> CLASS . ID herencia LBRACE ATTRIBUTES declarAttributes METHODS declarMethods RBRACE declarClases

    ID              shift and go to state 12


state 8

    (7) declarClases -> empty .

    VAR             reduce using rule 7 (declarClases -> empty .)
    VOID            reduce using rule 7 (declarClases -> empty .)
    INT             reduce using rule 7 (declarClases -> empty .)
    FLOAT           reduce using rule 7 (declarClases -> empty .)
    CHAR            reduce using rule 7 (declarClases -> empty .)
    MAIN            reduce using rule 7 (declarClases -> empty .)


state 9

    (1) program -> PROGRAM ID initProg SCOLON declarClases declarVar . addGlobSize definFunc MAIN auxMain LPAREN RPAREN declarVar LBRACE listaEstatutos RBRACE endProg prueba
    (2) addGlobSize -> .

    VOID            reduce using rule 2 (addGlobSize -> .)
    INT             reduce using rule 2 (addGlobSize -> .)
    FLOAT           reduce using rule 2 (addGlobSize -> .)
    CHAR            reduce using rule 2 (addGlobSize -> .)
    MAIN            reduce using rule 2 (addGlobSize -> .)

    addGlobSize                    shift and go to state 13

state 10

    (46) declarVar -> VAR . tipo COLON listaIdDeclare SCOLON declarVar
    (32) tipo -> . ID
    (33) tipo -> . INT
    (34) tipo -> . FLOAT
    (35) tipo -> . CHAR

    ID              shift and go to state 15
    INT             shift and go to state 16
    FLOAT           shift and go to state 17
    CHAR            shift and go to state 18

    tipo                           shift and go to state 14

state 11

    (47) declarVar -> empty .

    VOID            reduce using rule 47 (declarVar -> empty .)
    INT             reduce using rule 47 (declarVar -> empty .)
    FLOAT           reduce using rule 47 (declarVar -> empty .)
    CHAR            reduce using rule 47 (declarVar -> empty .)
    MAIN            reduce using rule 47 (declarVar -> empty .)
    LBRACE          reduce using rule 47 (declarVar -> empty .)


state 12

    (6) declarClases -> CLASS ID . herencia LBRACE ATTRIBUTES declarAttributes METHODS declarMethods RBRACE declarClases
    (8) herencia -> . LT EXTENDS ID GT
    (9) herencia -> . empty
    (132) empty -> .

    LT              shift and go to state 20
    LBRACE          reduce using rule 132 (empty -> .)

    herencia                       shift and go to state 19
    empty                          shift and go to state 21

state 13

    (1) program -> PROGRAM ID initProg SCOLON declarClases declarVar addGlobSize . definFunc MAIN auxMain LPAREN RPAREN declarVar LBRACE listaEstatutos RBRACE endProg prueba
    (48) definFunc -> . tipoMethod FUNC ID auxFuncion LPAREN listaParam RPAREN declarVar setDI LBRACE listaEstatutos RBRACE endF definFunc
    (49) definFunc -> . empty
    (36) tipoMethod -> . VOID
    (37) tipoMethod -> . INT
    (38) tipoMethod -> . FLOAT
    (39) tipoMethod -> . CHAR
    (132) empty -> .

    VOID            shift and go to state 25
    INT             shift and go to state 26
    FLOAT           shift and go to state 27
    CHAR            shift and go to state 28
    MAIN            reduce using rule 132 (empty -> .)

    definFunc                      shift and go to state 22
    tipoMethod                     shift and go to state 23
    empty                          shift and go to state 24

state 14

    (46) declarVar -> VAR tipo . COLON listaIdDeclare SCOLON declarVar

    COLON           shift and go to state 29


state 15

    (32) tipo -> ID .

    COLON           reduce using rule 32 (tipo -> ID .)


state 16

    (33) tipo -> INT .

    COLON           reduce using rule 33 (tipo -> INT .)


state 17

    (34) tipo -> FLOAT .

    COLON           reduce using rule 34 (tipo -> FLOAT .)


state 18

    (35) tipo -> CHAR .

    COLON           reduce using rule 35 (tipo -> CHAR .)


state 19

    (6) declarClases -> CLASS ID herencia . LBRACE ATTRIBUTES declarAttributes METHODS declarMethods RBRACE declarClases

    LBRACE          shift and go to state 30


state 20

    (8) herencia -> LT . EXTENDS ID GT

    EXTENDS         shift and go to state 31


state 21

    (9) herencia -> empty .

    LBRACE          reduce using rule 9 (herencia -> empty .)


state 22

    (1) program -> PROGRAM ID initProg SCOLON declarClases declarVar addGlobSize definFunc . MAIN auxMain LPAREN RPAREN declarVar LBRACE listaEstatutos RBRACE endProg prueba

    MAIN            shift and go to state 32


state 23

    (48) definFunc -> tipoMethod . FUNC ID auxFuncion LPAREN listaParam RPAREN declarVar setDI LBRACE listaEstatutos RBRACE endF definFunc

    FUNC            shift and go to state 33


state 24

    (49) definFunc -> empty .

    MAIN            reduce using rule 49 (definFunc -> empty .)


state 25

    (36) tipoMethod -> VOID .

    FUNC            reduce using rule 36 (tipoMethod -> VOID .)


state 26

    (37) tipoMethod -> INT .

    FUNC            reduce using rule 37 (tipoMethod -> INT .)


state 27

    (38) tipoMethod -> FLOAT .

    FUNC            reduce using rule 38 (tipoMethod -> FLOAT .)


state 28

    (39) tipoMethod -> CHAR .

    FUNC            reduce using rule 39 (tipoMethod -> CHAR .)


state 29

    (46) declarVar -> VAR tipo COLON . listaIdDeclare SCOLON declarVar
    (12) listaIdDeclare -> . idDeclare
    (13) listaIdDeclare -> . idDeclare COMMA listaIdDeclare
    (14) idDeclare -> . ID auxDeclare auxDeclare2
    (15) idDeclare -> . ID auxDeclare LBRACK CTE_I addCteTable RBRACK auxCTE
    (16) idDeclare -> . ID auxDeclare LBRACK CTE_I addCteTable COMMA CTE_I addCteTable auxCTE2 RBRACK

    ID              shift and go to state 36

    listaIdDeclare                 shift and go to state 34
    idDeclare                      shift and go to state 35

state 30

    (6) declarClases -> CLASS ID herencia LBRACE . ATTRIBUTES declarAttributes METHODS declarMethods RBRACE declarClases

    ATTRIBUTES      shift and go to state 37


state 31

    (8) herencia -> LT EXTENDS . ID GT

    ID              shift and go to state 38


state 32

    (1) program -> PROGRAM ID initProg SCOLON declarClases declarVar addGlobSize definFunc MAIN . auxMain LPAREN RPAREN declarVar LBRACE listaEstatutos RBRACE endProg prueba
    (4) auxMain -> .

    LPAREN          reduce using rule 4 (auxMain -> .)

    auxMain                        shift and go to state 39

state 33

    (48) definFunc -> tipoMethod FUNC . ID auxFuncion LPAREN listaParam RPAREN declarVar setDI LBRACE listaEstatutos RBRACE endF definFunc

    ID              shift and go to state 40


state 34

    (46) declarVar -> VAR tipo COLON listaIdDeclare . SCOLON declarVar

    SCOLON          shift and go to state 41


state 35

    (12) listaIdDeclare -> idDeclare .
    (13) listaIdDeclare -> idDeclare . COMMA listaIdDeclare

    SCOLON          reduce using rule 12 (listaIdDeclare -> idDeclare .)
    COMMA           shift and go to state 42


state 36

    (14) idDeclare -> ID . auxDeclare auxDeclare2
    (15) idDeclare -> ID . auxDeclare LBRACK CTE_I addCteTable RBRACK auxCTE
    (16) idDeclare -> ID . auxDeclare LBRACK CTE_I addCteTable COMMA CTE_I addCteTable auxCTE2 RBRACK
    (17) auxDeclare -> .

    LBRACK          reduce using rule 17 (auxDeclare -> .)
    COMMA           reduce using rule 17 (auxDeclare -> .)
    SCOLON          reduce using rule 17 (auxDeclare -> .)

    auxDeclare                     shift and go to state 43

state 37

    (6) declarClases -> CLASS ID herencia LBRACE ATTRIBUTES . declarAttributes METHODS declarMethods RBRACE declarClases
    (10) declarAttributes -> . tipo COLON listaIdDeclare SCOLON declarAttributes
    (11) declarAttributes -> . empty
    (32) tipo -> . ID
    (33) tipo -> . INT
    (34) tipo -> . FLOAT
    (35) tipo -> . CHAR
    (132) empty -> .

    ID              shift and go to state 15
    INT             shift and go to state 16
    FLOAT           shift and go to state 17
    CHAR            shift and go to state 18
    METHODS         reduce using rule 132 (empty -> .)

    declarAttributes               shift and go to state 44
    tipo                           shift and go to state 45
    empty                          shift and go to state 46

state 38

    (8) herencia -> LT EXTENDS ID . GT

    GT              shift and go to state 47


state 39

    (1) program -> PROGRAM ID initProg SCOLON declarClases declarVar addGlobSize definFunc MAIN auxMain . LPAREN RPAREN declarVar LBRACE listaEstatutos RBRACE endProg prueba

    LPAREN          shift and go to state 48


state 40

    (48) definFunc -> tipoMethod FUNC ID . auxFuncion LPAREN listaParam RPAREN declarVar setDI LBRACE listaEstatutos RBRACE endF definFunc
    (50) auxFuncion -> .

    LPAREN          reduce using rule 50 (auxFuncion -> .)

    auxFuncion                     shift and go to state 49

state 41

    (46) declarVar -> VAR tipo COLON listaIdDeclare SCOLON . declarVar
    (46) declarVar -> . VAR tipo COLON listaIdDeclare SCOLON declarVar
    (47) declarVar -> . empty
    (132) empty -> .

    VAR             shift and go to state 10
    VOID            reduce using rule 132 (empty -> .)
    INT             reduce using rule 132 (empty -> .)
    FLOAT           reduce using rule 132 (empty -> .)
    CHAR            reduce using rule 132 (empty -> .)
    MAIN            reduce using rule 132 (empty -> .)
    LBRACE          reduce using rule 132 (empty -> .)

    declarVar                      shift and go to state 50
    empty                          shift and go to state 11

state 42

    (13) listaIdDeclare -> idDeclare COMMA . listaIdDeclare
    (12) listaIdDeclare -> . idDeclare
    (13) listaIdDeclare -> . idDeclare COMMA listaIdDeclare
    (14) idDeclare -> . ID auxDeclare auxDeclare2
    (15) idDeclare -> . ID auxDeclare LBRACK CTE_I addCteTable RBRACK auxCTE
    (16) idDeclare -> . ID auxDeclare LBRACK CTE_I addCteTable COMMA CTE_I addCteTable auxCTE2 RBRACK

    ID              shift and go to state 36

    idDeclare                      shift and go to state 35
    listaIdDeclare                 shift and go to state 51

state 43

    (14) idDeclare -> ID auxDeclare . auxDeclare2
    (15) idDeclare -> ID auxDeclare . LBRACK CTE_I addCteTable RBRACK auxCTE
    (16) idDeclare -> ID auxDeclare . LBRACK CTE_I addCteTable COMMA CTE_I addCteTable auxCTE2 RBRACK
    (18) auxDeclare2 -> .

    LBRACK          shift and go to state 53
    COMMA           reduce using rule 18 (auxDeclare2 -> .)
    SCOLON          reduce using rule 18 (auxDeclare2 -> .)

    auxDeclare2                    shift and go to state 52

state 44

    (6) declarClases -> CLASS ID herencia LBRACE ATTRIBUTES declarAttributes . METHODS declarMethods RBRACE declarClases

    METHODS         shift and go to state 54


state 45

    (10) declarAttributes -> tipo . COLON listaIdDeclare SCOLON declarAttributes

    COLON           shift and go to state 55


state 46

    (11) declarAttributes -> empty .

    METHODS         reduce using rule 11 (declarAttributes -> empty .)


state 47

    (8) herencia -> LT EXTENDS ID GT .

    LBRACE          reduce using rule 8 (herencia -> LT EXTENDS ID GT .)


state 48

    (1) program -> PROGRAM ID initProg SCOLON declarClases declarVar addGlobSize definFunc MAIN auxMain LPAREN . RPAREN declarVar LBRACE listaEstatutos RBRACE endProg prueba

    RPAREN          shift and go to state 56


state 49

    (48) definFunc -> tipoMethod FUNC ID auxFuncion . LPAREN listaParam RPAREN declarVar setDI LBRACE listaEstatutos RBRACE endF definFunc

    LPAREN          shift and go to state 57


state 50

    (46) declarVar -> VAR tipo COLON listaIdDeclare SCOLON declarVar .

    VOID            reduce using rule 46 (declarVar -> VAR tipo COLON listaIdDeclare SCOLON declarVar .)
    INT             reduce using rule 46 (declarVar -> VAR tipo COLON listaIdDeclare SCOLON declarVar .)
    FLOAT           reduce using rule 46 (declarVar -> VAR tipo COLON listaIdDeclare SCOLON declarVar .)
    CHAR            reduce using rule 46 (declarVar -> VAR tipo COLON listaIdDeclare SCOLON declarVar .)
    MAIN            reduce using rule 46 (declarVar -> VAR tipo COLON listaIdDeclare SCOLON declarVar .)
    LBRACE          reduce using rule 46 (declarVar -> VAR tipo COLON listaIdDeclare SCOLON declarVar .)


state 51

    (13) listaIdDeclare -> idDeclare COMMA listaIdDeclare .

    SCOLON          reduce using rule 13 (listaIdDeclare -> idDeclare COMMA listaIdDeclare .)


state 52

    (14) idDeclare -> ID auxDeclare auxDeclare2 .

    COMMA           reduce using rule 14 (idDeclare -> ID auxDeclare auxDeclare2 .)
    SCOLON          reduce using rule 14 (idDeclare -> ID auxDeclare auxDeclare2 .)


state 53

    (15) idDeclare -> ID auxDeclare LBRACK . CTE_I addCteTable RBRACK auxCTE
    (16) idDeclare -> ID auxDeclare LBRACK . CTE_I addCteTable COMMA CTE_I addCteTable auxCTE2 RBRACK

    CTE_I           shift and go to state 58


state 54

    (6) declarClases -> CLASS ID herencia LBRACE ATTRIBUTES declarAttributes METHODS . declarMethods RBRACE declarClases
    (40) declarMethods -> . tipoMethod FUNC ID LPAREN listaParam RPAREN LBRACE listaEstatutos RBRACE declarMethods
    (41) declarMethods -> . empty
    (36) tipoMethod -> . VOID
    (37) tipoMethod -> . INT
    (38) tipoMethod -> . FLOAT
    (39) tipoMethod -> . CHAR
    (132) empty -> .

    VOID            shift and go to state 25
    INT             shift and go to state 26
    FLOAT           shift and go to state 27
    CHAR            shift and go to state 28
    RBRACE          reduce using rule 132 (empty -> .)

    declarMethods                  shift and go to state 59
    tipoMethod                     shift and go to state 60
    empty                          shift and go to state 61

state 55

    (10) declarAttributes -> tipo COLON . listaIdDeclare SCOLON declarAttributes
    (12) listaIdDeclare -> . idDeclare
    (13) listaIdDeclare -> . idDeclare COMMA listaIdDeclare
    (14) idDeclare -> . ID auxDeclare auxDeclare2
    (15) idDeclare -> . ID auxDeclare LBRACK CTE_I addCteTable RBRACK auxCTE
    (16) idDeclare -> . ID auxDeclare LBRACK CTE_I addCteTable COMMA CTE_I addCteTable auxCTE2 RBRACK

    ID              shift and go to state 36

    listaIdDeclare                 shift and go to state 62
    idDeclare                      shift and go to state 35

state 56

    (1) program -> PROGRAM ID initProg SCOLON declarClases declarVar addGlobSize definFunc MAIN auxMain LPAREN RPAREN . declarVar LBRACE listaEstatutos RBRACE endProg prueba
    (46) declarVar -> . VAR tipo COLON listaIdDeclare SCOLON declarVar
    (47) declarVar -> . empty
    (132) empty -> .

    VAR             shift and go to state 10
    LBRACE          reduce using rule 132 (empty -> .)

    declarVar                      shift and go to state 63
    empty                          shift and go to state 11

state 57

    (48) definFunc -> tipoMethod FUNC ID auxFuncion LPAREN . listaParam RPAREN declarVar setDI LBRACE listaEstatutos RBRACE endF definFunc
    (42) listaParam -> . param
    (43) listaParam -> . param COMMA listaParam
    (44) listaParam -> . empty
    (45) param -> . tipo COLON ID
    (132) empty -> .
    (32) tipo -> . ID
    (33) tipo -> . INT
    (34) tipo -> . FLOAT
    (35) tipo -> . CHAR

    RPAREN          reduce using rule 132 (empty -> .)
    ID              shift and go to state 15
    INT             shift and go to state 16
    FLOAT           shift and go to state 17
    CHAR            shift and go to state 18

    listaParam                     shift and go to state 64
    param                          shift and go to state 65
    empty                          shift and go to state 66
    tipo                           shift and go to state 67

state 58

    (15) idDeclare -> ID auxDeclare LBRACK CTE_I . addCteTable RBRACK auxCTE
    (16) idDeclare -> ID auxDeclare LBRACK CTE_I . addCteTable COMMA CTE_I addCteTable auxCTE2 RBRACK
    (122) addCteTable -> .

    RBRACK          reduce using rule 122 (addCteTable -> .)
    COMMA           reduce using rule 122 (addCteTable -> .)

    addCteTable                    shift and go to state 68

state 59

    (6) declarClases -> CLASS ID herencia LBRACE ATTRIBUTES declarAttributes METHODS declarMethods . RBRACE declarClases

    RBRACE          shift and go to state 69


state 60

    (40) declarMethods -> tipoMethod . FUNC ID LPAREN listaParam RPAREN LBRACE listaEstatutos RBRACE declarMethods

    FUNC            shift and go to state 70


state 61

    (41) declarMethods -> empty .

    RBRACE          reduce using rule 41 (declarMethods -> empty .)


state 62

    (10) declarAttributes -> tipo COLON listaIdDeclare . SCOLON declarAttributes

    SCOLON          shift and go to state 71


state 63

    (1) program -> PROGRAM ID initProg SCOLON declarClases declarVar addGlobSize definFunc MAIN auxMain LPAREN RPAREN declarVar . LBRACE listaEstatutos RBRACE endProg prueba

    LBRACE          shift and go to state 72


state 64

    (48) definFunc -> tipoMethod FUNC ID auxFuncion LPAREN listaParam . RPAREN declarVar setDI LBRACE listaEstatutos RBRACE endF definFunc

    RPAREN          shift and go to state 73


state 65

    (42) listaParam -> param .
    (43) listaParam -> param . COMMA listaParam

    RPAREN          reduce using rule 42 (listaParam -> param .)
    COMMA           shift and go to state 74


state 66

    (44) listaParam -> empty .

    RPAREN          reduce using rule 44 (listaParam -> empty .)


state 67

    (45) param -> tipo . COLON ID

    COLON           shift and go to state 75


state 68

    (15) idDeclare -> ID auxDeclare LBRACK CTE_I addCteTable . RBRACK auxCTE
    (16) idDeclare -> ID auxDeclare LBRACK CTE_I addCteTable . COMMA CTE_I addCteTable auxCTE2 RBRACK

    RBRACK          shift and go to state 76
    COMMA           shift and go to state 77


state 69

    (6) declarClases -> CLASS ID herencia LBRACE ATTRIBUTES declarAttributes METHODS declarMethods RBRACE . declarClases
    (6) declarClases -> . CLASS ID herencia LBRACE ATTRIBUTES declarAttributes METHODS declarMethods RBRACE declarClases
    (7) declarClases -> . empty
    (132) empty -> .

    CLASS           shift and go to state 7
    VAR             reduce using rule 132 (empty -> .)
    VOID            reduce using rule 132 (empty -> .)
    INT             reduce using rule 132 (empty -> .)
    FLOAT           reduce using rule 132 (empty -> .)
    CHAR            reduce using rule 132 (empty -> .)
    MAIN            reduce using rule 132 (empty -> .)

    declarClases                   shift and go to state 78
    empty                          shift and go to state 8

state 70

    (40) declarMethods -> tipoMethod FUNC . ID LPAREN listaParam RPAREN LBRACE listaEstatutos RBRACE declarMethods

    ID              shift and go to state 79


state 71

    (10) declarAttributes -> tipo COLON listaIdDeclare SCOLON . declarAttributes
    (10) declarAttributes -> . tipo COLON listaIdDeclare SCOLON declarAttributes
    (11) declarAttributes -> . empty
    (32) tipo -> . ID
    (33) tipo -> . INT
    (34) tipo -> . FLOAT
    (35) tipo -> . CHAR
    (132) empty -> .
